--- a/style.css
+++ b/style.css
@@ -1,51 +1,216 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100vh;
+  font-family: Arial, sans-serif;
 }
 
 .container {
-  max-width: 600px;
-  margin: 50px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 12px;
 }
 
-h2 {
+.mainTitle {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.mainDescription {
+  font-size: 1.3rem;
+  color: #777777;
+}
+
+.financingDescription {
+  font-size: 1.2rem;
+  color: #00b773;
+  font-weight: bold;
+}
+
+.financingForm {
+  margin: 36px 0;
+  padding: 45px;
+  background: #f7f7f7;
+  border-radius: 36px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 15px;
+  width: 600px;
+  font-size: large;
+}
+
+.formGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+input,
+select {
+  padding: 12px;
+  border: 1px solid #d1d1d1;
+  border-radius: 6px;
+}
+
+#calculateButton {
+  padding: 12px;
+  border: none;
+  border-radius: 45px;
+  background: #00b773;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background 0.3s ease;
+
+  &:hover {
+    background: #00a86b;
+  }
+}
+
+#messageValidation {
   text-align: center;
-  margin-bottom: 20px;
+  font-size: 1.2rem;
+  color: red;
 }
 
-label {
-  display: block;
-  margin-bottom: 8px;
+#initDepositValidation {
+  font-size: 1.2rem;
+  color: red;
 }
 
-label[for="isMarry"] {
-  display: inline;
+.resultContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  background: #00ba6c;
+  margin: 36px 0;
+  padding: 45px;
+  border-radius: 36px;
+  width: 600px;
+  font-size: large;
+  color: white;
 }
 
-select,
-input[type="number"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-input[type="checkbox"] {
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-bottom: 20px;
+.periodShow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  flex-direction: column;
 }
 
 .results {
-  margin-top: 20px;
-  padding: 10px;
-  background: #e9e9e9;
-  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 15px;
+  background: #06a763;
+  padding: 36px;
+  border-radius: 36px;
+  width: 100%;
+}
+
+.titleQuota {
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+#firstPeriodQuota,
+#secondPeriodQuota {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.titleDataExtra {
+  margin-top: 12px;
+  padding-top: 9px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: start;
+  width: 100%;
+}
+
+.extraData {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  width: 100%;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+  padding: 15px 0;
+}
+
+.dataShow {
+  display: flex;
+  justify-content: space-between;
+  font-size: 0.96rem;
+}
+
+.dataShow > span {
+  text-align: end;
+}
+
+.interestRateShow {
+  margin-top: 12px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+
+.actionButtons {
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  width: 100%;
+  padding: 10px 0;
+}
+
+.contactButton {
+  padding: 12px;
+  text-align: center;
+  text-decoration: none;
+  border: 1px solid white;
+  border-radius: 45px;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background 0.3s ease;
+
+  &:hover {
+    background: #00a86b;
+  }
+}
+
+#newCalcButton {
+  padding: 12px;
+  border: none;
+  border-radius: 45px;
+  background: white;
+  color: #00b773;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: background 0.3s ease;
+
+  &:hover {
+    background: #f0f0f0;
+  }
+}
+
+.hidden {
+  display: none;
 }
