--- a/style.css
+++ b/style.css
@@ -110,6 +110,9 @@ select {
   align-items: center;
   gap: 6px;
   flex-direction: column;
+  border-top: 1px solid white;
+  width: 100%;
+  padding: 6px 0;
 }
 
 .results {
